--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -409,8 +409,9 @@ button:hover {
   }
 
   .left-h h2 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1.8rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
   }
 
